--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,7 +11,7 @@
     z-index: 9999;
     color: $blue;
     text-align: center;
-    min-width: 140px;
+    min-width: 160px;
 }
 
 .container {
@@ -26,18 +26,17 @@ h1 {
   letter-spacing: 0.22em;
   line-height: 1;
   margin: 0;
-  padding-left: 5px;
-  padding-top:3px;
+  padding: 3px 0px 10px 7px;
   font-size: 18px;
   @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
-          font-size: calc(18px + (99 - 18) * ((100vw - 200px) / (768 - 200)));
+      font-size: calc(18px + (99 - 18) * ((100vw - 200px) / (768 - 200)));
   }
   @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-      padding: 5px 20px;
+      padding: 20px;
       font-size: calc(95px + (191 - 95) * ((100vw - 768px) / (1440 - 768)));
   }
   @media screen and (min-width: $break--dsktp--lg){
-      padding: 5px 20px;
+      padding: 20px;
       font-size: calc(191px + (271 - 191) * ((100vw - 1440px) / (2000 - 1440)));
   }
 }
@@ -113,7 +112,6 @@ h3 {
 .blob-btn {
   $numOfBlobs: 4;
   position: relative;
-  padding: 20px 46px;
   color: $blue;
   font-size: 16px;
   font-weight: bold;
@@ -122,7 +120,24 @@ h3 {
   border: none;
   transition: color 0.5s;
   cursor: pointer;
-  border-radius:30px;
+  padding: 20px;
+  width: 240px;
+  margin: 24px;
+  @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
+    width: calc(240px + (400 - 240) * ((100vw - 380px) / (768 - 351)));
+    font-size: calc(16px + (18 - 16) * ((100vw - 380px) / (768 - 351)));
+  }
+  @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
+    margin-top: 60px;
+    width: calc(400px + (600 - 400) * ((100vw - 768px) / (1440 - 768)));
+    font-size: calc(18px + (34 - 18) * ((100vw - 768px) / (1440 - 768)));
+  }
+  @media screen and (min-width: $break--dsktp--lg){
+    margin-top: 100px;
+    width: calc(600px + (800 - 600) * ((100vw - 1440px) / (2000 - 1440)));
+    font-size: calc(34px + (42 - 34) * ((100vw - 1440px) / (2000 - 1440)));
+    
+  }
   
   &:before {
     content: "";
