--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,6 +18,7 @@
 // -------------------------------------- COLORS -------------------------------------- //
 
 $blue: #4200FF;
+$green: #00FF00;
 
 
 // ------------------------------------ BREAKPOINTS ------------------------------------ //
