got portfolio sizing down

--- a/src/styles/blobButton.scss
+++ b/src/styles/blobButton.scss
@@ -2,6 +2,7 @@
 
 .blob-btn {
     $numOfBlobs: 4;
+    font-family: degular, sans-serif;
     position: relative;
     color: $blue;
     font-size: 16px;
