--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -61,8 +61,8 @@
     &--0 {
         right: 0;
     }
-    &--30 {
-        right: 30px;
+    &--40 {
+        right: 40px;
     }
 }
 
@@ -70,15 +70,24 @@
     &--0 {
         top: 0;
     }
+    &--40 {
+        top: 40px;
+    }
 }
 
 .padding {
+    &-bottom {
+        &--20 {
+            padding-bottom: 20px;
+        }
+    }
     &--20 {
        padding: 20px; 
     }
     &--40 {
         padding: 40px; 
-     }
+    }
+
 }
 
 .margin {
@@ -89,11 +98,8 @@
     }
 }
 
-// -------------------------------------- tbd -------------------------------------- //
+// ------------------------------------- POSITION ------------------------------------- //
 
-.hide {
-    display: none;
-}
 
 .position {
     &--absolute {
@@ -109,12 +115,17 @@
     &--center {
         text-align: center;
     }
+    &--left {
+        text-align: left;
+    }
 }
 
 
+.hide {
+    display: none;
+}
 
-
-
+// -------------------------------------- tbd -------------------------------------- //
 .border {
     &--none {
         border: none;
@@ -129,6 +140,6 @@ a {
     text-decoration: none;
 }
 
-a:visited {
+a:visited, a:-webkit-any-link {
     color: $blue;
 }
