done, except for reviewing text and spacing

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -6,16 +6,42 @@
     margin: 0;
     padding: 0;
   }
+
+  .main-border {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border: 10px solid $blue;
+    margin: 20px;
+    z-index: 9999;
+    color: $blue;
+    text-align: center;
+    min-width: 160px;
+}
+
+.container {
+  position: relative;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
   
 
-// -------------------------------------- ANIMATIONS -------------------------------------- //
+// --------------------------------- HOVER ANIMATION --------------------------------- //
 
 .underline-animation:hover {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift 1s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%2300FF00' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-    background-position: 0 100%;
+    background-image: url('../assets/wavy.svg');
+    background-position: 0 86%;
     background-size: auto 6px;
     background-repeat: repeat-x;
     text-decoration: none;
+    animation: slideleft 2000s infinite linear;
+  }
+
+@keyframes slideleft {
+    from { background-position-x: -200px; }
+    to { background-position-x: -90000px; }
   }
 
 // -------------------------------------- FLEX -------------------------------------- //
@@ -95,6 +121,12 @@
         &---5 {
             margin-top: -5px;
         }
+    }
+}
+
+.min-width {
+    &--200 {
+        min-width: 200px;
     }
 }
 
