--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -5,59 +5,52 @@
     h2 {
         font-family: 'Archivo-Black', Arial, sans-serif;
         line-height: 1;
-        font-size: 34px;
-        // @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
-        //     font-size: calc(18px + (99 - 18) * ((100vw - 200px) / (768 - 200)));
-        // }
-        // @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-        //     padding: 20px;
-        //     font-size: calc(95px + (191 - 95) * ((100vw - 768px) / (1440 - 768)));
-        // }
-        // @media screen and (min-width: $break--dsktp--lg){
-        //     padding: 20px;
-        //     font-size: calc(191px + (271 - 191) * ((100vw - 1440px) / (2000 - 1440)));
-        // }
+        font-weight: 400;
+        font-size: 32px;
+        @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
+            font-size: calc(32px + (72 - 32) * ((100vw - 380px) / (768 - 380)));
+        }
+        @media screen and (min-width: $break--tblt) {
+            font-size: 72px;
+        }
     }
     
     h3 {
         font-family: 'Alata-Regular', Arial, sans-serif;
         line-height: 1;
-        font-size: 22px;
         padding-bottom: 5px;
-        // @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
-        //     font-size: calc(8px + (40 - 8) * ((100vw - 200px) / (768 - 200)));
-        // }
-        // @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-        //     font-size: calc(40px + (77 - 40) * ((100vw - 768px) / (1440 - 768)));
-        // }
-        // @media screen and (min-width: $break--dsktp--lg){
-        //     font-size: calc(77px + (108 - 77) * ((100vw - 1440px) / (2000 - 1440)));
-        // }
+        font-size: 22px;
+        @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
+          font-size: calc(22px + (47 - 22) * ((100vw - 380px) / (768 - 380)));
+        }
+        @media screen and (min-width: $break--tblt) {
+          font-size: 47px;
+        }
       }
 
       p {
         font-family: degular, sans-serif;
         line-height: 1;
-        font-size: 12px;
         padding-bottom: 5px;
-        // @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
-        //     font-size: calc(8px + (40 - 8) * ((100vw - 200px) / (768 - 200)));
-        // }
-        // @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-        //     font-size: calc(40px + (77 - 40) * ((100vw - 768px) / (1440 - 768)));
-        // }
-        // @media screen and (min-width: $break--dsktp--lg){
-        //     font-size: calc(77px + (108 - 77) * ((100vw - 1440px) / (2000 - 1440)));
-        // }
+        font-size: 12px;
+        @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
+          font-size: calc(12px + (28 - 12) * ((100vw - 380px) / (768 - 380)));
+        }
+        @media screen and (min-width: $break--tblt) {
+          font-size: 28px;
+        }
       }
 
       h5 {
         font-family: degular, sans-serif;
-        font-size: 10px;
         font-style: italic;
         font-weight: 200;
+        font-size: 10px;
+        @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
+          font-size: calc(10px + (24 - 10) * ((100vw - 380px) / (768 - 380)));
+        }
+        @media screen and (min-width: $break--tblt) {
+          font-size: 24px;
+        }
       }
 }
-
-
-
