--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -61,6 +61,10 @@
     }
 }
 
+.inline-block {
+    display: inline-block;
+}
+
 .justify {
     &--evenly {
         justify-content: space-evenly;
@@ -155,6 +159,12 @@
 
 .hide {
     display: none;
+}
+
+.z-index{
+    &--1 {
+        z-index: 1;
+    }
 }
 
 // -------------------------------------- tbd -------------------------------------- //
