--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -117,6 +117,9 @@
             padding-bottom: 20px;
         }
     }
+    &--5 {
+        padding: 5px; 
+     }
     &--20 {
        padding: 20px; 
     }
