--- a/src/styles/blobButton.scss
+++ b/src/styles/blobButton.scss
@@ -97,7 +97,7 @@
     &__blob {
       position: absolute;
       top: 5px;
-      width: 100% / $numOfBlobs;
+      width: calc(100% / $numOfBlobs);
       height: 100%;
       background: $blue;
       border-radius: 100%;
@@ -110,7 +110,7 @@
       
       @for $i from 1 through $numOfBlobs {
         &:nth-child(#{$i}) {
-          left: ($i - 1) * (120% / $numOfBlobs);
+          left: calc(($i - 1) * (120% / $numOfBlobs));
           transition-delay: ($i - 1) * 0.08s;
         }
       }
