--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -18,7 +18,6 @@
     color: $blue;
     text-align: center;
     min-width: 160px;
-    min-height: 600px;
 }
 
 .container {
@@ -133,9 +132,13 @@
     &--5 {
         padding: 5px; 
      }
+    &--15 {
+        padding: 15px; 
+     }
     &--20 {
        padding: 20px; 
     }
+
     &--40 {
         padding: 40px; 
     }
@@ -163,6 +166,9 @@
             margin-top: -5px;
         }
     }
+    &--40 {
+        margin: 40px;
+    }
 }
 
 .min-width {
@@ -178,8 +184,14 @@
     &--absolute {
         position: absolute;
     }
+    &--relative {
+        position: relative;
+    }
     &--fixed {
         position: fixed;
+    }
+    &--center {
+        left: 0; right:0; top: 0; bottom:0;
     }
 }
 
@@ -201,6 +213,12 @@
 .z-index{
     &--1 {
         z-index: 1;
+    }
+}
+
+.height {
+    &--full {
+        height: 100%
     }
 }
 
