icons are looking good

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,6 +24,7 @@ $green: #00FF00;
 // ------------------------------------ BREAKPOINTS ------------------------------------ //
 
 $break--min: 200px;
+$break--mbl--sm: 350px;
 $break--mbl: 380px;
 $break--tblt: 768px;
 $break--dsktp--lg: 1440px;
