--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -166,8 +166,8 @@
             margin-top: -5px;
         }
     }
-    &--40 {
-        margin: 40px;
+    &--3per {
+        margin: 3%;
     }
 }
 
