--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,25 +1,45 @@
 @import '_variables.scss'; 
 
 .home {
-    h1 {
-        font-family: 'Archivo-Black', Arial, sans-serif;
-        letter-spacing: 0.22em;
-        line-height: 1;
-        font-size: 18px;
-        padding: 5px;
-        @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
-          padding: calc(5px + (20 - 5) * ((100vw - 200px) / (768 - 200)));
-          font-size: calc(18px + (90 - 18) * ((100vw - 200px) / (768 - 200)));
-        }
-        @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-          padding: 20px;
-          font-size: calc(46px + (94 - 46) * ((100vw - 768px) / (1440 - 768)));
-        }
-        @media screen and (min-width: $break--dsktp--lg){
-            padding: 20px;
-            font-size: calc(94px + (135 - 94) * ((100vw - 1440px) / (2000 - 1440)));
-        }
-      }
+  h1 {
+    font-family: 'Archivo-Black', Arial, sans-serif;
+    letter-spacing: 0.22em;
+    line-height: 1;
+    font-size: 18px;
+  }
+
+  .hor {
+    padding: 5px;
+    @media screen and (min-width: $break--mbl--sm) and (max-width: $break--tblt) {
+      padding: calc(5px + (20 - 5) * ((100vw - 350px) / (768 - 350)));
+      font-size: calc(18px + (45 - 18) * ((100vw - 350px) / (768 - 350)));
+    }
+    @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
+      padding: 20px;
+      font-size: calc(45px + (90 - 45) * ((100vw - 768px) / (1440 - 768)));
+    }
+    @media screen and (min-width: $break--dsktp--lg){
+        padding: 20px;
+        font-size: calc(90px + (125 - 90) * ((100vw - 1440px) / (2000 - 1440)));
+    }
+  }
+
+  .vert {
+    padding: 5px;
+    @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
+      padding: calc(5px + (20 - 5) * ((100vw - 200px) / (768 - 200)));
+      font-size: calc(18px + (90 - 18) * ((100vw - 200px) / (768 - 200)));
+    }
+    @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
+      padding: 20px;
+      font-size: calc(46px + (94 - 46) * ((100vw - 768px) / (1440 - 768)));
+    }
+    @media screen and (min-width: $break--dsktp--lg){
+        padding: 20px;
+        font-size: calc(94px + (135 - 94) * ((100vw - 1440px) / (2000 - 1440)));
+    }
+  }
+   
       
       p {
         font-family: 'Alata-Regular', Arial, sans-serif;
