--- a/src/styles/randomIcons.scss
+++ b/src/styles/randomIcons.scss
@@ -10,3 +10,11 @@
   .transition {
     transition: left 0.5s ease, top 0.5s ease; /* CSS transition for left and top properties during animation */
 }
+
+.floating-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
